--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Space Grotesk', sans-serif !important;
+  font-family: 'Inter', sans-serif !important;
+    -webkit-font-smoothing: antialiased !important;
 }
 body * {
   box-sizing: border-box;
